--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "glob": "^7.1.6",
-    "glob-promise": "^4.0.1"
+    "glob-promise": "^4.0.1",
+    "joi": "^17.4.0"
   },
   "devDependencies": {
     "chai": "^4.3.0",
